# mugen

./: .eslintrc.json  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  habits.db  tauri.conf.json
src-tauri/bindings/: Habit.ts  HabitEntry.ts  HabitEntryValues.ts  HabitType.ts  HabitValues.ts  HabitWithEntries.ts
src-tauri/db_queries/: create_db_query.sql  delete_db_query.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controllers/: .habit.rs.rustfmt  habit.rs
src-tauri/src/helpers/: db.rs  fs.rs  mod.rs
src-tauri/src/models/: habit.rs  mod.rs
src/components/: theme-toggle.tsx
src/components/ui/: alert-dialog.tsx  checkbox.tsx  dropdown-menu.tsx  header.tsx  navigation-menu.tsx  options-dropdown.tsx  profile-dropdown.tsx  table.tsx  toast.tsx
src/lib/: tauri.ts
src/routes/: __root.tsx  _layout.tsx
src/routes/_layout/: dashboard.tsx  index.tsx
