[package]
name = "mugen"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "mugen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.31.0"
strum = "0.26.1"
strum_macros = "0.26.1"
ts-rs = "7.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
